export/v1.0.6a/changelog.md
 
## V1.0.6a

 - Fixed broken wafer recipe.
 
## V1.0.6

 - Fixed two instances of possible savegame corruption
 - Added settings: VSync, FPS Limit, World Volume, Invert Cam
 - Render scale setting isn't ignored anymore on game start
 - Can now scroll to top part of the tech tree when using small/tiny UI Scale
 - Floor Tile Eraser now also removes incomplete floortiles
 
## V1.0.5

 - Fixed a few wrong translations
 - Added missing credits
 - Fixed a bug with the counter gate not working and causing not being able to save after having started a new colony without first quitting the game. 
 - Fixed a bug with empty pod workers being able to block the gyne cocoon, halting its progress.
 - Fixed the tech tree showing a black screen on small resolutions.
 - Rearranged some things in the tech tree, timer gate and caste gate are easier to unlock.
 - Made "Flying larvae" objective easier.
 - Fixed workshop collider
 - Fixed "new" UI element displayed on gate while it should be gone.
 
## V1.0.4

 - Added a missing splash screen
 - Fixed an issue with settings fond in Asian languages.
 - Fixed a bug causing a crash.
 
## V1.0.3

 - Updated a few tutorial videos
 - Greatly reduced larva booster process time.
 - Added Chinese logo in game
 - Rebalanced queen energy requirement and added more steps
 - Other smaller fixes and tweaks
 
## V1.0.2

 - Fixed several bugs causing crashes
 - Buffed ant launcher strength
 - Buffed desert plants fruit
 - Nerfed inventor tower
 - Changed pod workers old timing
 - Fixed tooltip sometimes not dissappearing
 - Many UI fixes
 - Fixed other smaller bugs
 
## V1.0.1

 - Added render scale setting
 - Updated some UI elements
 - Added hotkeys for trail drag lock and send pickups from stockpile
 - Changed a few key bindings
 - Rebalanced the later population objectives
 - Some tweaks in the concrete biome
 - Tweaked some visual stuff
 - More smaller tweaks and fixes
 
## V1.0.0

 - Optimized build size.
 - Improved performance with trail rendering.
 - Some changes in the instinct progression.
 - Several UI updates.
 - Rebalanced queen energy requirement for later stages
 - Added additional sound effects
 - Updated a few meshes
 - Final batch of translation in
 - Changed up some things in the toxic waste and concrete biome.
 - Lots of smaller tweaks and fixes.
 
## V0.3.6

 - Updated factory mesh
 - Buffed small beacon range
 - Fixed princesses and gynes being able to pickup items from buildings
 - Rearranged some things in the tech tree, ant launcher and catapult unlocked earlier
 - Rebalanced queen energy requirement, makes for faster feedback on how much energy per second you're giving (stage will be much higher on old saves but it will balance out eventually)
 - Updated some tutorial videos
 - Fixed some tutorials not showing at the right time
 - Fixed some canvas scaling issues with ultra wide
 - Tweaked some UI elements
 - More smaller changes...
 
## V0.3.5

 - Fix for the send items button not working.
 - Added an extra recipe to create digger ants.
 - Updated new meshes found in the concrete biome.
 
## V0.3.4

 - Made some UI updates
 - Fixed a bug with stockpile gate interface.
 - Fixed other smaller interface bugs.
 - Added and edited some objects found in later biomes
 
## V0.3.3

 - Some updates and fixes in the UI.
 
## V0.3.2

 - Changed small beacon model and cost.
 - Fixed a bug with buildings not finding action points after relocating.
 - Fixed a bug with counter gates giving an error unexpectedly.
 - Made a lot of buildings fit better on a grid (might look weird if build before this update, to fix: please demolish building and place again).
 - Tweaked stockpile highlight shader to save performance with full stockpiles.
 - Added some missing icons.
 - Fixed several other bugs.
 
## V0.3.1

 - Fixed a bug with the interface.
 
## V0.3

 - Update the on-click UI for many objects.
 - Added the possibility to manually send materials from one stockpile to the other.
 - Enabled French, German, Polish, Russian, Chinese Simplified, Korean and Japanese languages.
 - New models for T2 and T3 gynes.
 - Renamed bulb ants to "pod ants"
 - When their lifespan runs out, pod ants turn back into the empty variant, alowing them to be equipped with a new energy pod.
 - Loads of balance tweaks.
 - Added achievements.
 
## V0.2.6

 - Added 3 new types of gates
 - Added the main trail
 - Improved trail button flow
 - Added the deconstructor
 - Rearranged the development tree a bit
 - Added missing meshes, replaced a few
 - Glass deposits can now be found in the Toxic Wasteland
 - Loads of balance changes
 - Gynes required for progressing through the development tree, using a new currency
 - Added some extra tutorials
 - Added map mode hotkey 'M'
 - Added a floortile eraser
 - Lots of smaller fixes
 
## V0.2.5

 - Fixed gate trails sometimes not spawning with a gate, causing a save error
 - Fixed floortiles not propperly attaching to eachother
 - Visual tweaks in the development tree
 - Added an objective to find the jungle
 
## V0.2.4

 - Updated logic gates on click UI
 - Logic gates can now be configured before placement
 - Rearranged some things in the development tree
 - Added an objective to bring larvae to the second island
 - Updated material icons
 - Lots of smaller fixes
 
## V0.2.3a

 - Fixed the combiner not satisfying the instinct objective.
 
## V0.2.3

 - Fixed the combiner not appearing.
 - Added old gate, sort ants based on whether they're old or not.
 - Added big eraser.
 - Added counter end.
 - Switched some things around in the development tree, life gate is now unlocked in Tier 2.
 - Counter gate is now unlocked through instinct and not with the development tree anymore.
 - Changed some icons.
 - Smaller fixes.
 
## V0.2.2

 - Hotfix for an error causing to not loading a save.
 - Adjusted all buildings to fit on the grid.
 - Increased drone move speed a bit.
 
## V0.2.1

 - Fixed some problems with the feedback input field.
 - Fixed the island scanners spawning an outdated biome.
 - Better looking graph UI.
 - Added some UI to notice the player about the ant inventory.
 - Some smaller fixes...
 
## V0.2.0

 - Added Tier 2 and Tier 3 back to the development tree, more than doubling its size.
 - Improved the development tree with new background effects.
 - Added upgraded gynes for Tier 2 en Tier 3
 - Added several new ant castes that double as requirements for the new gynes.
 - Added objective buildings.
 - New islands are now always revealed using the island scanner buildings.
 - Added the inventor tower, allowing you to harvest inventor points without having to click them.
 - Added the population graph where you map out to populations of individual ant castes.
 - Added a nuptial flight UI element that tracks the time until next flight and how many gynes you've flown out.
 - Added enhanced audio effects for the nuptial flight.
 - Ants that are now at the end of their lifespan now gain the old status effect, making them visually distinctive.
 - The UI when clicked on ants now appears at the bottom of the screen (to be implemented for all other objects).
 - Many bug fixes
 - Smaller stuff..
 
## V0.1.2

 - Rearranged Tier 1 development tree.
 - Added the slinger, a smaller catapult with a shorter range (mesh still WIP).
 - Fixed the expired Discord link.
 
## V0.1.1

 - Revamped the UI.
 - Rearranged the development tree to be focussed around the population of the colony. Features content up to Tier 1.
 - Added a major objective; the production of gynes, which is introduced via the Instinct progression.
 - A report screen is shown after every nuptial flight, which gives you insight over your performance over the last cycle.
 - Added concrete floortiles, a floortile that can be build for free but requires to be adjacent to a concrete core.
 - Added a smaller energy storage and moved small beacons back to Tier 1.
 - Added version history UI element